tests/dataset/tpc-ds/compiler/cpp/q97.error
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:61:8: error: redefinition of ‘struct StoreSale’
   61 | struct StoreSale {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:53:8: note: previous definition of ‘struct StoreSale’
   53 | struct StoreSale {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:65:8: error: redefinition of ‘struct CatalogSale’
   65 | struct CatalogSale {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:57:8: note: previous definition of ‘struct CatalogSale’
   57 | struct CatalogSale {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:70:12: error: ‘ss’ was not declared in this scope
   70 |   decltype(ss.ss_customer_sk) customer_sk;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:70:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:71:12: error: ‘ss’ was not declared in this scope
   71 |   decltype(ss.ss_item_sk) item_sk;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:71:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:74:12: error: ‘ss’ was not declared in this scope
   74 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:74:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:81:12: error: ‘cs’ was not declared in this scope
   81 |   decltype(cs) cs;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:81:12: error: ‘cs’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:88:12: error: ‘store_only’ was not declared in this scope
   88 |   decltype(store_only) store_only;
      |            ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:88:12: error: ‘store_only’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:89:12: error: ‘catalog_only’ was not declared in this scope
   89 |   decltype(catalog_only) catalog_only;
      |            ^~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:89:12: error: ‘catalog_only’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:90:12: error: ‘both’ was not declared in this scope
   90 |   decltype(both) store_and_catalog;
      |            ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:90:12: error: ‘both’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:122:13: error: redefinition of ‘void __json(const CatalogSale&)’
  122 | inline void __json(const CatalogSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:92:13: note: ‘void __json(const CatalogSale&)’ previously defined here
   92 | inline void __json(const CatalogSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:152:13: error: redefinition of ‘void __json(const StoreSale&)’
  152 | inline void __json(const StoreSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:107:13: note: ‘void __json(const StoreSale&)’ previously defined here
  107 | inline void __json(const StoreSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:217:21: error: no match for ‘operator==’ (operand types are ‘Ssci’ and ‘Ssci’)
  217 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 Ssci   Ssci
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:218:41: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  218 |           __g.items.push_back(__struct4{ss});
      |                                         ^~
      |                                         |
      |                                         StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:225:63: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  225 |             __struct5{__key, std::vector<__struct4>{__struct4{ss}}});
      |                                                               ^~
      |                                                               |
      |                                                               StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:225:66: error: no matching function for call to ‘std::vector<__struct4>::vector(<brace-enclosed initializer list>)’
  225 |             __struct5{__key, std::vector<__struct4>{__struct4{ss}}});
      |                                                                  ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:6:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct4; _Alloc = std::allocator<__struct4>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; allocator_type = std::allocator<__struct4>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; std::__type_identity_t<_Alloc> = std::allocator<__struct4>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; allocator_type = std::allocator<__struct4>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; allocator_type = std::allocator<__struct4>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; std::__type_identity_t<_Alloc> = std::allocator<__struct4>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; size_type = long unsigned int; value_type = std::vector<__struct4>::value_type; allocator_type = std::allocator<__struct4>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; size_type = long unsigned int; allocator_type = std::allocator<__struct4>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct4; _Alloc = std::allocator<__struct4>; allocator_type = std::allocator<__struct4>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct4; _Alloc = std::allocator<__struct4>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:233:5: error: conversion from ‘vector<Ssci>’ to non-scalar type ‘vector<__struct4>’ requested
  211 |   std::vector<__struct4> ssci = ([&]() {
      |                                 ~~~~~~~~
  212 |     std::vector<__struct5> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  213 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  214 |       auto __key = Ssci{ss.ss_customer_sk, ss.ss_item_sk};
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  215 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  216 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  217 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  218 |           __g.items.push_back(__struct4{ss});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  219 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  220 |           break;
      |           ~~~~~~
  221 |         }
      |         ~
  222 |       }
      |       ~
  223 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  224 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  225 |             __struct5{__key, std::vector<__struct4>{__struct4{ss}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  226 |       }
      |       ~
  227 |     }
      |     ~
  228 |     std::vector<Ssci> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  229 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  230 |       __items.push_back(Ssci{g.key.customer_sk, g.key.item_sk});
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  231 |     }
      |     ~
  232 |     return __items;
      |     ~~~~~~~~~~~~~~~
  233 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:240:21: error: no match for ‘operator==’ (operand types are ‘Ssci’ and ‘Ssci’)
  240 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 Ssci   Ssci
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:241:36: error: cannot convert ‘CatalogSale’ to ‘int’ in initialization
  241 |           __g.items.push_back(Csci{cs});
      |                                    ^~
      |                                    |
      |                                    CatalogSale
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:247:68: error: cannot convert ‘CatalogSale’ to ‘int’ in initialization
  247 |         __groups.push_back(__struct7{__key, std::vector<Csci>{Csci{cs}}});
      |                                                                    ^~
      |                                                                    |
      |                                                                    CatalogSale
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:247:71: error: no matching function for call to ‘std::vector<Csci>::vector(<brace-enclosed initializer list>)’
  247 |         __groups.push_back(__struct7{__key, std::vector<Csci>{Csci{cs}}});
      |                                                                       ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Csci; _Alloc = std::allocator<Csci>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Csci; _Alloc = std::allocator<Csci>; allocator_type = std::allocator<Csci>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Csci; _Alloc = std::allocator<Csci>; std::__type_identity_t<_Alloc> = std::allocator<Csci>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Csci; _Alloc = std::allocator<Csci>; allocator_type = std::allocator<Csci>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Csci; _Alloc = std::allocator<Csci>; allocator_type = std::allocator<Csci>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Csci; _Alloc = std::allocator<Csci>; std::__type_identity_t<_Alloc> = std::allocator<Csci>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Csci; _Alloc = std::allocator<Csci>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Csci; _Alloc = std::allocator<Csci>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Csci; _Alloc = std::allocator<Csci>; size_type = long unsigned int; value_type = Csci; allocator_type = std::allocator<Csci>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Csci; _Alloc = std::allocator<Csci>; size_type = long unsigned int; allocator_type = std::allocator<Csci>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Csci; _Alloc = std::allocator<Csci>; allocator_type = std::allocator<Csci>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Csci; _Alloc = std::allocator<Csci>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:255:5: error: conversion from ‘vector<Ssci>’ to non-scalar type ‘vector<Csci>’ requested
  234 |   std::vector<Csci> csci = ([&]() {
      |                            ~~~~~~~~
  235 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  236 |     for (auto cs : catalog_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  237 |       auto __key = Ssci{cs.cs_bill_customer_sk, cs.cs_item_sk};
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  238 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  239 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  240 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  241 |           __g.items.push_back(Csci{cs});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  242 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  243 |           break;
      |           ~~~~~~
  244 |         }
      |         ~
  245 |       }
      |       ~
  246 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  247 |         __groups.push_back(__struct7{__key, std::vector<Csci>{Csci{cs}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  248 |       }
      |       ~
  249 |     }
      |     ~
  250 |     std::vector<Ssci> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  251 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  252 |       __items.push_back(Ssci{g.key.customer_sk, g.key.item_sk});
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  253 |     }
      |     ~
  254 |     return __items;
      |     ~~~~~~~~~~~~~~~
  255 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:260:44: error: ‘struct __struct4’ has no member named ‘customer_sk’
  260 |                                  if (!(((s.customer_sk == c.customer_sk) &&
      |                                            ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:260:61: error: ‘struct Csci’ has no member named ‘customer_sk’
  260 |                                  if (!(((s.customer_sk == c.customer_sk) &&
      |                                                             ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:261:44: error: ‘struct __struct4’ has no member named ‘item_sk’
  261 |                                         (s.item_sk == c.item_sk))))
      |                                            ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:261:57: error: ‘struct Csci’ has no member named ‘item_sk’
  261 |                                         (s.item_sk == c.item_sk))))
      |                                                         ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:256:28: error: conversion from ‘int’ to non-scalar type ‘std::vector<int>’ requested
  256 |   std::vector<int> both = ((int)([&]() {
      |                           ~^~~~~~~~~~~~~
  257 |                              std::vector<decltype(1)> __items;
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  258 |                              for (auto s : ssci) {
      |                              ~~~~~~~~~~~~~~~~~~~~~
  259 |                                for (auto c : csci) {
      |                                ~~~~~~~~~~~~~~~~~~~~~
  260 |                                  if (!(((s.customer_sk == c.customer_sk) &&
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  261 |                                         (s.item_sk == c.item_sk))))
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  262 |                                    continue;
      |                                    ~~~~~~~~~
  263 |                                  __items.push_back(1);
      |                                  ~~~~~~~~~~~~~~~~~~~~~
  264 |                                }
      |                                ~
  265 |                              }
      |                              ~
  266 |                              return __items;
      |                              ~~~~~~~~~~~~~~~
  267 |                            })()
      |                            ~~~~
  268 |                                .size());
      |                                ~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:274:29: error: ‘struct __struct4’ has no member named ‘customer_sk’
  274 |                  return ((s.customer_sk == c.customer_sk) &&
      |                             ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:275:29: error: ‘struct __struct4’ has no member named ‘item_sk’
  275 |                          (s.item_sk == c.item_sk));
      |                             ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:270:8: error: conversion from ‘int’ to non-scalar type ‘std::vector<int>’ requested
  270 |       ((int)([&]() {
      |       ~^~~~~~~~~~~~~
  271 |          std::vector<decltype(1)> __items;
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  272 |          for (auto s : ssci) {
      |          ~~~~~~~~~~~~~~~~~~~~~
  273 |            if (!((!(std::any_of(csci.begin(), csci.end(), [&](auto c) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  274 |                  return ((s.customer_sk == c.customer_sk) &&
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  275 |                          (s.item_sk == c.item_sk));
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~
  276 |                })))))
      |                ~~~~~~
  277 |              continue;
      |              ~~~~~~~~~
  278 |            __items.push_back(1);
      |            ~~~~~~~~~~~~~~~~~~~~~
  279 |          }
      |          ~
  280 |          return __items;
      |          ~~~~~~~~~~~~~~~
  281 |        })()
      |        ~~~~
  282 |            .size());
      |            ~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:288:46: error: ‘struct Csci’ has no member named ‘customer_sk’
  288 |                  return ((s.customer_sk == c.customer_sk) &&
      |                                              ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:289:42: error: ‘struct Csci’ has no member named ‘item_sk’
  289 |                          (s.item_sk == c.item_sk));
      |                                          ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:284:8: error: conversion from ‘int’ to non-scalar type ‘std::vector<int>’ requested
  284 |       ((int)([&]() {
      |       ~^~~~~~~~~~~~~
  285 |          std::vector<decltype(1)> __items;
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  286 |          for (auto c : csci) {
      |          ~~~~~~~~~~~~~~~~~~~~~
  287 |            if (!((!(std::any_of(ssci.begin(), ssci.end(), [&](auto s) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  288 |                  return ((s.customer_sk == c.customer_sk) &&
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  289 |                          (s.item_sk == c.item_sk));
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~
  290 |                })))))
      |                ~~~~~~
  291 |              continue;
      |              ~~~~~~~~~
  292 |            __items.push_back(1);
      |            ~~~~~~~~~~~~~~~~~~~~~
  293 |          }
      |          ~
  294 |          return __items;
      |          ~~~~~~~~~~~~~~~
  295 |        })()
      |        ~~~~
  296 |            .size());
      |            ~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:297:24: error: cannot convert ‘std::vector<int>’ to ‘int’ in initialization
  297 |   auto result = Result{store_only, catalog_only, both};
      |                        ^~~~~~~~~~
      |                        |
      |                        std::vector<int>
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = Csci]’:
/usr/include/c++/13/bits/predefined_ops.h:318:23:   required from ‘bool __gnu_cxx::__ops::_Iter_pred<_Predicate>::operator()(_Iterator) [with _Iterator = __gnu_cxx::__normal_iterator<Csci*, std::vector<Csci> >; _Predicate = main()::<lambda()>::<lambda(auto:1)>]’
/usr/include/c++/13/bits/stl_algobase.h:2072:14:   required from ‘_RandomAccessIterator std::__find_if(_RandomAccessIterator, _RandomAccessIterator, _Predicate, random_access_iterator_tag) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<Csci*, vector<Csci> >; _Predicate = __gnu_cxx::__ops::_Iter_pred<main()::<lambda()>::<lambda(auto:1)> >]’
/usr/include/c++/13/bits/stl_algobase.h:2117:23:   required from ‘_Iterator std::__find_if(_Iterator, _Iterator, _Predicate) [with _Iterator = __gnu_cxx::__normal_iterator<Csci*, vector<Csci> >; _Predicate = __gnu_cxx::__ops::_Iter_pred<main()::<lambda()>::<lambda(auto:1)> >]’
/usr/include/c++/13/bits/stl_algo.h:3923:28:   required from ‘_IIter std::find_if(_IIter, _IIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<Csci*, vector<Csci> >; _Predicate = main()::<lambda()>::<lambda(auto:1)>]’
/usr/include/c++/13/bits/stl_algo.h:477:47:   required from ‘bool std::none_of(_IIter, _IIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<Csci*, vector<Csci> >; _Predicate = main()::<lambda()>::<lambda(auto:1)>]’
/usr/include/c++/13/bits/stl_algo.h:496:27:   required from ‘bool std::any_of(_IIter, _IIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<Csci*, vector<Csci> >; _Predicate = main()::<lambda()>::<lambda(auto:1)>]’
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:273:32:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:274:46: error: ‘struct Csci’ has no member named ‘customer_sk’
  274 |                  return ((s.customer_sk == c.customer_sk) &&
      |                                            ~~^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:275:42: error: ‘struct Csci’ has no member named ‘item_sk’
  275 |                          (s.item_sk == c.item_sk));
      |                                        ~~^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = __struct4]’:
/usr/include/c++/13/bits/predefined_ops.h:318:23:   required from ‘bool __gnu_cxx::__ops::_Iter_pred<_Predicate>::operator()(_Iterator) [with _Iterator = __gnu_cxx::__normal_iterator<__struct4*, std::vector<__struct4> >; _Predicate = main()::<lambda()>::<lambda(auto:2)>]’
/usr/include/c++/13/bits/stl_algobase.h:2072:14:   required from ‘_RandomAccessIterator std::__find_if(_RandomAccessIterator, _RandomAccessIterator, _Predicate, random_access_iterator_tag) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<__struct4*, vector<__struct4> >; _Predicate = __gnu_cxx::__ops::_Iter_pred<main()::<lambda()>::<lambda(auto:2)> >]’
/usr/include/c++/13/bits/stl_algobase.h:2117:23:   required from ‘_Iterator std::__find_if(_Iterator, _Iterator, _Predicate) [with _Iterator = __gnu_cxx::__normal_iterator<__struct4*, vector<__struct4> >; _Predicate = __gnu_cxx::__ops::_Iter_pred<main()::<lambda()>::<lambda(auto:2)> >]’
/usr/include/c++/13/bits/stl_algo.h:3923:28:   required from ‘_IIter std::find_if(_IIter, _IIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<__struct4*, vector<__struct4> >; _Predicate = main()::<lambda()>::<lambda(auto:2)>]’
/usr/include/c++/13/bits/stl_algo.h:477:47:   required from ‘bool std::none_of(_IIter, _IIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<__struct4*, vector<__struct4> >; _Predicate = main()::<lambda()>::<lambda(auto:2)>]’
/usr/include/c++/13/bits/stl_algo.h:496:27:   required from ‘bool std::any_of(_IIter, _IIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<__struct4*, vector<__struct4> >; _Predicate = main()::<lambda()>::<lambda(auto:2)>]’
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:287:32:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:288:29: error: ‘struct __struct4’ has no member named ‘customer_sk’
  288 |                  return ((s.customer_sk == c.customer_sk) &&
      |                           ~~^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq9749740569/001/prog.cpp:289:29: error: ‘struct __struct4’ has no member named ‘item_sk’
  289 |                          (s.item_sk == c.item_sk));
      |                           ~~^~~~~~~
